src/compiler/snapshots/isa__compiler__lexer__tests__ident-4.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"ifs\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "ifs",
            ),
            span: SpanData { file_id: 0, start: 0, end: 3 },
        },
    ),
)
