src/compiler/snapshots/isa__compiler__lexer__tests__ident-5.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"thenz\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "thenz",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 5 },
        },
    ),
)
