src/compiler/snapshots/isa__compiler__lexer__tests__ident-6.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"true10\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "true10",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 6 },
        },
    ),
)
