src/compiler/snapshots/isa__compiler__lexer__tests__ident-7.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"false18\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "false18",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 7 },
        },
    ),
)
