src/compiler/snapshots/isa__compiler__lexer__tests__ident-8.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"aint\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "aint",
            ),
            span: SpanData { file_id: 0, start: 0, end: 4 },
        },
    ),
)
