src/compiler/snapshots/isa__compiler__lexer__tests__ident-9.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"lbool\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "lbool",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 5 },
        },
    ),
)
