src/compiler/snapshots/isa__compiler__lexer__tests__ident.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"_i\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "_i",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 2 },
        },
    ),
)
