src/compiler/snapshots/isa__compiler__lexer__tests__ifs-3.snap
---
source: src/compiler/lexer.rs
expression: "Lexer ::\nnew(0, \"if !false then !true else if false then true else false\").collect :: <\nVec < _ >> ()"
---
[
    Ok(
        Spand {
            data: KwIf,
            span: SpanData { file_id: 0, lo: 0, hi: 2 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "!",
            ),
            span: SpanData { file_id: 0, lo: 3, hi: 4 },
        },
    ),
    Ok(
        Spand {
            data: KwFalse,
            span: SpanData { file_id: 0, lo: 4, hi: 9 },
        },
    ),
    Ok(
        Spand {
            data: KwThen,
            span: SpanData { file_id: 0, lo: 10, hi: 14 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "!",
            ),
            span: SpanData { file_id: 0, lo: 15, hi: 16 },
        },
    ),
    Ok(
        Spand {
            data: KwTrue,
            span: SpanData { file_id: 0, lo: 16, hi: 20 },
        },
    ),
    Ok(
        Spand {
            data: KwElse,
            span: SpanData { file_id: 0, lo: 21, hi: 25 },
        },
    ),
    Ok(
        Spand {
            data: KwIf,
            span: SpanData { file_id: 0, lo: 26, hi: 28 },
        },
    ),
    Ok(
        Spand {
            data: KwFalse,
            span: SpanData { file_id: 0, lo: 29, hi: 34 },
        },
    ),
    Ok(
        Spand {
            data: KwThen,
            span: SpanData { file_id: 0, lo: 35, hi: 39 },
        },
    ),
    Ok(
        Spand {
            data: KwTrue,
            span: SpanData { file_id: 0, lo: 40, hi: 44 },
        },
    ),
    Ok(
        Spand {
            data: KwElse,
            span: SpanData { file_id: 0, lo: 45, hi: 49 },
        },
    ),
    Ok(
        Spand {
            data: KwFalse,
            span: SpanData { file_id: 0, lo: 50, hi: 55 },
        },
    ),
]
