src/compiler/snapshots/isa__compiler__lexer__tests__infix-5.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"1 * 2 * 3 + ((() & (1) ^^ []) >>= 'd')\").collect :: < Vec < _\n>> ()"
---
[
    Ok(
        Spand {
            data: Integer(
                1,
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 1 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "*",
            ),
            span: SpanData { file_id: 0, lo: 2, hi: 3 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                2,
            ),
            span: SpanData { file_id: 0, lo: 4, hi: 5 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "*",
            ),
            span: SpanData { file_id: 0, lo: 6, hi: 7 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                3,
            ),
            span: SpanData { file_id: 0, lo: 8, hi: 9 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "+",
            ),
            span: SpanData { file_id: 0, lo: 10, hi: 11 },
        },
    ),
    Ok(
        Spand {
            data: LParen,
            span: SpanData { file_id: 0, lo: 12, hi: 13 },
        },
    ),
    Ok(
        Spand {
            data: LParen,
            span: SpanData { file_id: 0, lo: 13, hi: 14 },
        },
    ),
    Ok(
        Spand {
            data: LParen,
            span: SpanData { file_id: 0, lo: 14, hi: 15 },
        },
    ),
    Ok(
        Spand {
            data: RParen,
            span: SpanData { file_id: 0, lo: 15, hi: 16 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "&",
            ),
            span: SpanData { file_id: 0, lo: 17, hi: 18 },
        },
    ),
    Ok(
        Spand {
            data: LParen,
            span: SpanData { file_id: 0, lo: 19, hi: 20 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                1,
            ),
            span: SpanData { file_id: 0, lo: 20, hi: 21 },
        },
    ),
    Ok(
        Spand {
            data: RParen,
            span: SpanData { file_id: 0, lo: 21, hi: 22 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "^^",
            ),
            span: SpanData { file_id: 0, lo: 23, hi: 25 },
        },
    ),
    Ok(
        Spand {
            data: LBracket,
            span: SpanData { file_id: 0, lo: 26, hi: 27 },
        },
    ),
    Ok(
        Spand {
            data: RBracket,
            span: SpanData { file_id: 0, lo: 27, hi: 28 },
        },
    ),
    Ok(
        Spand {
            data: RParen,
            span: SpanData { file_id: 0, lo: 28, hi: 29 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                ">>=",
            ),
            span: SpanData { file_id: 0, lo: 30, hi: 33 },
        },
    ),
    Ok(
        Spand {
            data: Char(
                100,
            ),
            span: SpanData { file_id: 0, lo: 34, hi: 37 },
        },
    ),
    Ok(
        Spand {
            data: RParen,
            span: SpanData { file_id: 0, lo: 37, hi: 38 },
        },
    ),
]
