src/compiler/snapshots/isa__compiler__lexer__tests__invalid_errors.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r\"λ\").next()"
---
Some(
    Err(
        Spand {
            data: InvalidChar(
                'λ',
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 2 },
        },
    ),
)
